# fastapi-portifolio

./: .gitignore  README.md  main.py  pyproject.toml  settings_template.json
api/: weather_api.py
infrastructure/: weather_cache.py
models/: location.py
services/: openweather_service.py  report_service.py
templates/home/: index.html
templates/shared/: layout.html
views/: home.py
